--- a/index.html
+++ b/index.html
@@ -105,6 +105,6 @@
         const max_date=new Date(today.getFullYear()-18,today.getMonth(),today.getDate())
         document.getElementById("dob").setAttribute('min',min_date.toISOString().split('T')[0])
         document.getElementById("dob").setAttribute('max',max_date.toISOString().split('T')[0])</script>
-    <script src="./form_script.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
