--- a/index.html
+++ b/index.html
@@ -128,6 +128,6 @@
         });
 
     </script>
-    <script src="./form_script.js"></script>
+    <script src="./indexjs"></script>
 </body>
 </html>
